glibc (2.23.90+20160507.87523e9-2) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-PTR_MANGLE.diff: New patch to fix build.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 20:50:17 +0200

glibc (2.23.90+20160507.87523e9-1) experimental; urgency=medium

  * New upstream snapshot from 20160705:
    - Fix locales license.  Closes: #555168.
    - Fix Spanish locale 1st week definition.  Closes: #826888.
    - debian/patches/localedata/sort-UTF8-first.diff: rebased.
    - debian/patches/localedata/locale-eo_EO.diff: upstreamed.
    - debian/patches/localedata/locale-ku_TR.diff: rebased.
    - debian/patches/localedata/fo_FO-date_fmt.diff: rebased.
    - debian/patches/localedata/locales-fr.diff: rebased.
    - debian/patches/localedata/locale-en_DK.diff: rebased.
    - debian/patches/localedata/locale-hsb_DE.diff: rebased.
    - debian/patches/localedata/fr_CH-first_weekday.diff: upstreamed.
    - debian/patches/localedata/locale-de_LI.diff: rebased.
    - debian/patches/localedata/submitted-bz9725-locale-sv_SE.diff: rebased.
    - debian/patches/localedata/first_weekday.diff: upstreamed.
    - debian/patches/localedata/submitted-en_AU-date_fmt.diff: rebased.
    - debian/patches/amd64/local-blacklist-for-Intel-TSX.diff
    - debian/patches/arm/local-arm-futex.diff: rebased.
    - debian/patches/hppa/local-stack-grows-up.diff: dropped, obsolete.
    - debian/patches/hurd-i386/local-enable-ldconfig.diff: rebased.
    - debian/patches/hurd-i386/tg-tls-threadvar.diff: rebased.
    - debian/patches/hurd-i386/tg-hooks.diff: rebased.
    - debian/patches/hurd-i386/cvs-openat.diff: upstreamed.
    - debian/patches/hurd-i386/cvs-gai_sigqueue.diff: upstreamed.
    - debian/patches/hurd-i386/cvs-aio_sigqueue.diff: upstreamed.
    - debian/patches/hurd-i386/cvs-open.diff: upstreamed.
    - debian/patches/hurd-i386/cvs-c++-types.diff: upstreamed.
    - debian/patches/hurd-i386/cvs-errnos.d.diff: upstreamed.