@@ -3,6 +3,12 @@ glibc (2.23.90+20160507.87523e9-2) UNRELEASED; urgency=medium
   [ Samuel Thibault ]
   * patches/hurd-i386/cvs-PTR_MANGLE.diff: New patch to fix build.
 
+  [ Aurelien Jarno ]
+  * debian/testsuite-xfail-debian.mk: allow conform/XPG3/sys/stat.h
+    and conform/XPG4/sys/stat.h to fail on mips and mipsel, similarly
+    to the others sys/stat.h conform tests. Group all theses entries
+    and an explanation.
+
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 20:50:17 +0200
 
 glibc (2.23.90+20160507.87523e9-1) experimental; urgency=medium
